k3s/00-namespace-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bigintensive
