k3s/9-smartwatch-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartwatch-simulator
  namespace: bigintensive
  labels:
    app: smartwatch-simulator
    tier: simulator
spec:
  replicas: 0
  selector:
    matchLabels:
      app: smartwatch-simulator
  template:
    metadata:
      labels:
        app: smartwatch-simulator
        tier: simulator
    spec:
      containers:
        - name: smartwatch-simulator
          image: davidefast/smartwatch-simulator:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
